--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -1,8 +1,11 @@
 @import "../theme";
 
 .primary-button {
+  @include center;
+
   &:hover {
-    transform: translateY(-2px);
+    transform: translateY(-4px);
+    border: 2px solid $inputblue;
   }
   &:disabled {
     cursor: default;
@@ -11,17 +14,51 @@
       transform: none;
     }
   }
-  padding: 6px;
-  font-weight: 700;
+  padding: 10px;
   text-transform: uppercase;
-  font-size: 13px;
   text-align: center;
-  height: 35px;
-  border: none;
-  border-radius: $borderRadius;
+  border-radius: $buttonedge;
   cursor: pointer;
   opacity: 1;
-  color: $background;
-  background-color: $accent;
   transition: all 0.3s ease;
+  background: $turquise;
+  color: $textColor;
+  border: 2px solid $textColor;
+  box-shadow: $dropShadow;
+  font-weight: 700;
+  font-size: large;
+  align-self: center;
+  justify-self: center;
 }
+
+.join-button {
+  // Inherit properties from primary button
+  @extend .primary-button;
+
+  // Override or add properties specific to the secondary button
+  background: $turquise; // Change background color
+}
+
+.lobby-overview-button {
+  // Inherit properties from primary button
+  @extend .join-button;
+  font-size: $inputfontsize;
+}
+
+.spotifyButton{
+  @extend .primary-button;
+  background: $spotifygreen;
+  padding: 10px
+
+}
+
+
+.iconContainer{
+  @include center;
+  margin: 5px;
+  margin-left: 20px;
+
+}
+
+
+
