--- a/src/styles/views/CustomizeGameParameter.scss
+++ b/src/styles/views/CustomizeGameParameter.scss
@@ -30,18 +30,16 @@
 }
 
 
-
-
 .normalInput{
-  padding: 5px;
-  width: 100%;
-  max-height: 15%;
+  padding: 2px;
+  width: 200px;
+  max-height: 50%;
   display: flex;
   background: $inputblue;
   border: 2px solid $textColor;
   box-shadow: $dropShadow;
   border-radius: 60px;
-  margin-top: 10px;
+  margin-top: 3px;
   color: $textColor;
   font-weight: bold;
   text-align: center;
@@ -49,7 +47,6 @@
   &:hover {
     //transform: translateY(-1px);
     border: 2px solid $warning;
-
   }
   cursor: pointer;
 }
@@ -74,6 +71,20 @@
   @include center;
   flex-direction: row;
   flex-grow: 1;
+}
 
+.label{
+  color: $textColor;
+  font-weight: bold;
+  align-self: start;
+  width: 200px;
+  font-size: $inputfontsize;
+}
 
+.inputpair{
+  @include center;
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  //border: solid 1px $textColor;
 }
