--- a/src/styles/views/LobbyOverview.scss
+++ b/src/styles/views/LobbyOverview.scss
@@ -19,8 +19,8 @@
   grid-template-rows: auto;
   grid-row-gap: 20px;
   grid-column-gap: 20px; // Keeps a constant gap between both rows and columns
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding-bottom: 10px;
   padding-top: 10px;
 }
