--- a/src/styles/ui/LobbyObject.scss
+++ b/src/styles/ui/LobbyObject.scss
@@ -71,10 +71,12 @@
 
 
 .playlist-name {
-  @include center;
   font-weight: bold;
   font-size: 1.5rem;
-  margin-right: 20px;
+  white-space: nowrap;
+  width: 125px;
+  overflow: hidden;
+  text-overflow: clip;
 }
 
 
