made GameOverScreen, routing not yet

--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -5,12 +5,17 @@
   @extend .normalInput;
   @include center;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 4fr 1fr;
   background-color: $turquise;
-  width: 200px;
+  width: 300px;
   border-radius: $borderRadius;
   max-height: 50px;
+  margin-bottom: 10px;
 
+}
+
+.centered-column {
+  @include center;
 }
 
 .button-label {
@@ -27,6 +32,6 @@
   color: $textColor;
   padding: 2px 6px;
   position: relative;
-  top: -20px;
-  right: -50px;
+  top: -15px;
+  right: -30px;
 }
