made system responsive

--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -2,12 +2,10 @@
 
 .primary-button {
   @include center;
-
   &:hover {
     transform: translateY(-4px);
     border: 2px solid $inputblue;
   }
-
   &:disabled {
     cursor: default;
     opacity: 0.4;
@@ -16,7 +14,6 @@
       transform: none;
     }
   }
-
   padding: 10px;
   text-transform: uppercase;
   text-align: center;
@@ -35,15 +32,11 @@
 }
 
 .join-button {
-  // Inherit properties from primary button
   @extend .primary-button;
-
-  // Override or add properties specific to the secondary button
-  background: $turquise; // Change background color
+  background: $turquise;
 }
 
 .lobby-overview-button {
-  // Inherit properties from primary button
   @extend .join-button;
   font-size: $inputfontsize;
 }
