--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -15,12 +15,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 60%;
-    max-width: 30em;
+    width: 80vw;
     height: 25em;
     font-size: 16px;
     font-weight: 300;
-    padding: 10px;
+    padding: 1rem;
     border-radius: 0.75em;
     border: solid $textColor 2px;
     background-color: $lightviolet;
@@ -68,9 +67,10 @@
   }
 
   &.button-container {
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     margin-top: 2em;
+    align-self: center;
   }
 }
