--- a/src/styles/views/CustomizeGameParameter.scss
+++ b/src/styles/views/CustomizeGameParameter.scss
@@ -5,19 +5,26 @@
 .BaseContainer {
   @extend .login, .container;
   border: solid $textColor;
-  padding: 40px;
-}
+  padding: 2rem;
+  @media screen and (min-width: 768px) {
+    padding: 1rem;}
+  }
 
 .BaseDiv {
   @extend .login, .form;
-  height: 600px;
-  width: 1000px;
-  max-width: 1000px;
+  height: 75vh;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border: solid $textColor;
   overflow: auto;
+  margin: 0 auto;
+  padding: 2rem;
+
+  @media screen and (min-width: 768px) {
+    padding: 4rem;
+  }
 
 }
 
@@ -34,14 +41,14 @@
 
 .normalInput {
   padding: 2px;
-  width: 280px;
+  width: 100%;
   max-height: 50%;
   display: flex;
   background: $inputblue;
   border: 2px solid $textColor;
   box-shadow: $dropShadow;
-  border-radius: 60px;
-  margin-top: 3px;
+  border-radius: $borderRadius;
+  margin-top: 0.5rem;
   color: $textColor;
   font-weight: bold;
   text-align: center;
@@ -51,7 +58,6 @@
     //transform: translateY(-1px);
     border: 2px solid $warning;
   }
-
   cursor: pointer;
 }
 
@@ -83,23 +89,32 @@
   align-self: flex-start;
   width: 280px;
   font-size: $inputfontsize;
+  @media screen and (min-width: 768px) {
+    width: auto;
+  }
 }
 
 .inputpair {
   @include center;
   display: flex;
   flex-direction: column;
-  margin: 15px;
-  //border: solid 1px $textColor;
+  margin: 1rem;
+  @media screen and (min-width: 768px) {
+    margin: 1.5rem;
+  }
 }
 
 .error-message-container {
   @include center;
-  margin: 10px;
-  width: 80%;
-  padding: 20px;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border: 2px solid $textColor;
   border-radius: $borderRadius;
   background: $warning;
+  @media screen and (min-width: 768px) {
+    margin: 1rem;
+    padding: 1rem;
+  }
 }
 
 .error-messages {
@@ -111,7 +126,7 @@
   @include center;
   overflow-wrap: anywhere;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); // Creates two columns of equal width
+  grid-template-columns: repeat(1, 1fr);
   grid-template-rows: auto;
   grid-row-gap: 5px;
   grid-column-gap: 10px; // Keeps a constant gap between both rows and columns
@@ -119,5 +134,11 @@
   align-items: flex-start;
   padding-bottom: 10px;
   padding-top: 10px;
+  @media screen and (min-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media screen and (min-width: 1100px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
