--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -7,10 +7,15 @@
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   background-color: $turquise;
-  width: 300px;
+  width: 50vw;
   border-radius: $borderRadius;
   max-height: 50px;
   margin-bottom: 10px;
+  min-width: 200px;
+  @media screen and (min-width: 1100px) {
+    width: 22vw;
+
+  }
 
 }
 
@@ -32,6 +37,10 @@
   color: $textColor;
   padding: 2px 6px;
   position: relative;
-  top: -15px;
-  right: -30px;
+  top: -60%;
+  right: -70%;
+  @media screen and (min-width: 1100px) {
+    top: -60%;
+    right: -70%;}
+
 }
