--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -9,7 +9,8 @@
   background-color: $turquise;
   width: 50vw;
   border-radius: $borderRadius;
-  max-height: 50px;
+  min-height: 50px;
+  max-height: 60px;
   margin-bottom: 10px;
   min-width: 200px;
   @media screen and (min-width: 1100px) {
