--- a/src/styles/views/CustomizeGameParameter.scss
+++ b/src/styles/views/CustomizeGameParameter.scss
@@ -122,23 +122,30 @@
   width: 100%;
 }
 
-.grid{
+.grid {
   @include center;
   overflow-wrap: anywhere;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr); /* Set initial grid columns to 2 */
   grid-template-rows: auto;
   grid-row-gap: 5px;
-  grid-column-gap: 10px; // Keeps a constant gap between both rows and columns
+  grid-column-gap: 10px; /* Keeps a constant gap between both rows and columns */
   justify-content: flex-start;
   align-items: flex-start;
   padding-bottom: 10px;
   padding-top: 10px;
-  @media screen and (min-width: 768px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @media screen and (min-width: 1100px) {
-    grid-template-columns: repeat(3, 1fr);
-  }
+
 }
+
+
+// @media screen and (min-width: 768px) {
+//   .grid {
+//     grid-template-columns: repeat(3, 1fr); /* Adjust columns for larger screens */
+//   }
+// }
+// @media screen and (min-width: 1100px) {
+//   .grid {
+//     grid-template-columns: repeat(4, 1fr); /* Adjust columns for even larger screens */
+//   }
+// }
 
