code cleanups; stopping the player doesnt work yet, @Diyar please check why i dont get it. conditionally render the albumurl, making gamescreen responsive cleaning up scss stylesheets,

--- a/src/styles/ui/Player.scss
+++ b/src/styles/ui/Player.scss
@@ -14,8 +14,8 @@
   transform: None;
   justify-self: center;
   align-self: center;
-  width: 200px;
-  height: 70%;
+  height: 40%;
+  width: 40%;
   border-radius: $borderRadius;
 }
 
@@ -27,16 +27,6 @@
 
 }
 
-.textinfo{
-  overflow-y: scroll;
-  border-radius: $borderRadius;
-  border: 2px solid $textColor;
-  margin: 1rem;
-  margin-top: 0rem;
-  width: 200px;
-  max-width: 200px;
-  height: 100px;
-}
 
 .now-playing-name{
   font-weight: bold;
