--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -142,7 +142,7 @@
 
 
 .card.card-back {
-  transform: rotateY(180deg);
+  //transform: rotateY(180deg);
   background-color: red;
   color: white;
 }
@@ -190,14 +190,4 @@
   font-size: smaller;
 }
 
-.spotifyplayercontainer{
-  align-self: center;
-  justify-self: center;
-  justify-self: center;
-  padding: 1rem;
-  width: 95%;
-  border-radius: $borderRadius;
-  border: solid $textColor 1px;
 
-  background-color: $inputblue;
-}
