--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -103,7 +103,7 @@
   @include center;
 }
 
-.alert.gameMessageContainer {
+.gameMessageContainer {
   display: flex;
   height: 15vh;
   width: 100%;
@@ -116,9 +116,15 @@
   padding: 1rem;
 }
 
+.gameMessageContaineralert{
+  @extend .gameMessageContainer;
+  background-color: $warning;
+}
+
 .gameMessage {
   color: $textColor;
   font-size: 16px;
+  font-weight: bold;
 }
 
 
@@ -200,11 +206,13 @@
   align-self: center;
   justify-self: center;
   padding: 1rem;
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  max-height: 95%;
   border-radius: $borderRadius;
   border: solid $textColor 2px;
   background-color: $inputblue;
   overflow: auto;
-
+  box-shadow: $dropShadow;
 }
+
+
