--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -181,12 +181,11 @@
 .albumcover {
   transform: rotateY(180deg);
   @include center;
-  height: 50%;
-  width: 75%;
+  height: 95%;
+  width: 95%;
   background-color: #494554;
   border-radius: $borderRadius;
   border: solid $textColor 1px;
-  margin-bottom: 3px;
 }
 
 .songtitle {
@@ -200,6 +199,13 @@
 .artisttitle {
   @extend .songtitle;
   font-size: smaller;
+}
+
+.imgurl{
+  width: 100%;
+  height: 100%;
+  border-radius: $borderRadius;
+  //border: 1px solid $textColor;
 }
 
 .spotifyplayercontainer {
