--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -5,7 +5,7 @@
     width: 100%;
     display: flex;
     margin-top: 2em;
-    min-height: 300px;
+    min-height: 30vh;
     @include center;
     flex-direction: column;
 
@@ -20,8 +20,8 @@
     font-size: 16px;
     font-weight: 300;
     padding: 1rem;
-    border-radius: 0.75em;
-    border: solid $textColor 2px;
+    border-radius: $borderRadius;
+    //border: solid $textColor 2px;
     background-color: $lightviolet;
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
@@ -43,34 +43,5 @@
     }
   }
 
-  &.field {
-    @include center;
 
-  }
-
-  &.input {
-    height: 35px;
-    padding-left: 15px;
-    margin-left: -4px;
-    border: none;
-    border-radius: 0.75em;
-    margin-bottom: 20px;
-    background: transparentize(white, 0.85);
-    color: $textColor;
-  }
-
-  &.label {
-    color: $textColor;
-    margin-bottom: 10px;
-    text-transform: lowercase;
-    font-weight: 300;
-  }
-
-  &.button-container {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    margin-top: 2em;
-    align-self: center;
-  }
 }
