changed layout and color of input fields in customizegameparams

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -16,7 +16,7 @@ $background: #0E525E;
 $warning: #FF4589;
 $turquise: #00A1B3;
 $spotifygreen: #1DB954;
-$inputblue: #006FFC;
+$inputblue: #264a79;
 $backgroundgrey: #494554;
 
 $buttonedge: 50px;
