--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -112,6 +112,8 @@
   background-color: $inputblue;
   box-shadow: $dropShadow;
   padding: 1rem;
+  max-height: 50px;
+
 }
 
 .gameMessageContaineralert{
