--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -29,6 +29,7 @@
   font-size: large;
   align-self: center;
   justify-self: center;
+  //max-width: 20vw;
 }
 
 
@@ -62,7 +63,8 @@
 .spotifyButton {
   @extend .primary-button;
   background: $spotifygreen;
-  padding: 10px
+  padding: 10px;
+  max-width: 30vw;
 
 }
 
