working game over screen and restart button

--- a/src/styles/views/LobbyWaitingRoom.scss
+++ b/src/styles/views/LobbyWaitingRoom.scss
@@ -103,6 +103,11 @@
 
 }
 
+.grid-item {
+  overflow: visible;
+  align-content: center;
+}
+
 .h3-title {
   font-size: large;
   font-weight: bold;
