--- a/src/styles/ui/Player.scss
+++ b/src/styles/ui/Player.scss
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  height: 10%;
+  width: 80%;
 }
 
 .albumcoverinplayer{
@@ -51,16 +53,19 @@
   margin: 0.5rem;
 }
 
-.volumebuttons{
+.volumebuttons {
   @include center;
-  width: 200px;
   display: flex;
   flex-direction: row;
   border-radius: $borderRadius;
-  border: 2px solid $textColor;
 
 }
 
 ::-webkit-scrollbar {
   display: none;  /* Hides the scrollbar */
+}
+
+.button-container{
+  margin-top: 5px ;
+  background-color: red;
 }
