--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -10,16 +10,22 @@
   width: 100%;
   border-radius: $borderRadius;
   height: 30%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   @media scrseen and (min-width: 1100px) {
     width: 20%;
   }
+  cursor: default;
+  &:hover {
+    border: 2px solid transparent;
+  }
+
 
 }
 
 .userbox-me {
   @extend .userbox;
   background-color: $turquise;
+  border: 2px solid $textColor;
   // color: black;
 
 }
