--- a/src/styles/ui/Player.scss
+++ b/src/styles/ui/Player.scss
@@ -4,6 +4,7 @@
 @import "../views/GameScreen";
 
 .base{
+  @include center;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -51,6 +52,7 @@
   justify-self: center;
   font-size: medium;
   margin: 0.5rem;
+  width: 60px;
 }
 
 .volumebuttons {
@@ -65,7 +67,6 @@
   display: none;  /* Hides the scrollbar */
 }
 
-.button-container{
+.button-container-2{
   margin-top: 5px ;
-  background-color: red;
 }
