--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -194,13 +194,13 @@
 }
 
 .spotifyplayercontainer {
-  align-self: center;
+  @include center;
+  align-self: start;
   justify-self: center;
   padding: 1rem;
   width: 100%;
   max-height: 95%;
   border-radius: $borderRadius;
-  border: solid $textColor 2px;
   background-color: $inputblue;
   overflow: auto;
   box-shadow: $dropShadow;
