--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -42,9 +42,9 @@
   @include center;
   height: 35px;
   width: 35px;
-  background-color: $turquise;
+  background-color: $inputblue;
   border-radius: 50%;
-  border: solid $textColor 2px;
+  border: solid $inputblue 1px;
   color: $textColor;
   padding: 2px 6px;
   position: relative;
