--- a/src/styles/views/GameScreen.scss
+++ b/src/styles/views/GameScreen.scss
@@ -117,7 +117,7 @@
 
 }
 
-.gameMessageContaineralert{
+.gameMessageContaineralert {
   @extend .gameMessageContainer;
   background-color: $warning;
   border: 2px solid $textColor;
@@ -187,7 +187,7 @@
   overflow: hidden;
 }
 
-.imgurl{
+.imgurl {
   width: 100%;
   height: 100%;
   border-radius: $borderRadius;
@@ -205,14 +205,15 @@
   overflow: auto;
   box-shadow: $dropShadow;
   max-width: 90%;
+  min-height: 25vh;
 }
 
-.usr{
-margin-left: 1.5rem;
-margin-right: 1.5rem;
-margin-top: 1rem;
+.usr {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-top: 1rem;
 }
 
-.leave-button{
+.leave-button {
   background-color: $inputblue;
 }
