adjusted some stuff

--- a/src/styles/ui/InfoBox.scss
+++ b/src/styles/ui/InfoBox.scss
@@ -3,17 +3,22 @@
 .info-box {
   display: flex;
   position: fixed;
-  width: 800px;
+  width: 80vw;
   height: fit-content;
+  //max-height: 80vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: $accent;
   padding: 20px;
-  border: 1px solid $textColor;
   color: $textColor;
   border-radius: 10px;
   box-shadow: $dropShadow;
+  overflow: scroll;
+  @media screen and (min-width: 1100px) {
+    width: 60vw;
+  }
+
 }
 
 .column {
