--- a/src/styles/ui/InfoBox.scss
+++ b/src/styles/ui/InfoBox.scss
@@ -39,14 +39,22 @@
 
 .button-container-exit {
   position: absolute;
+  cursor: pointer;
   top: 0;
   right: 0;
   padding: 5px;
 }
 
+.button-container-wiki {
+  display: flex;
+  justify-content: center;
+  padding-top: 3vh;
+}
+
 .exit-button {
   background-color: $accentDark;
   box-shadow: $dropShadow;
+  cursor: pointer;
   border: 1px solid;
   border-radius: 50px;
   color: $textColor;
